# sample-app

./: .bazelignore  .bazelrc  .gitignore  .npmrc  BUILD.bazel  LICENSE  MODULE.bazel  README.md  buf.gen.yaml  go.mod  go.sum  noai-sentinel.txt  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
cmd/api/: BUILD.bazel  main.go
cmd/migrate/: BUILD.bazel
deploy/: BUILD.bazel
deploy/app/: api-deployment.yaml  api-service.yaml  gateway-deployment.yaml  gateway-service.yaml  http-route.yaml  kustomization.yaml
deploy/app-preview/: kustomization.yaml
deploy/infra/: postgres-cluster.yaml
deploy/migrations/: kustomization.yaml  migration-job.yaml  setup-job.yaml
deploy/migrations-preview/: kustomization.yaml
docs/: patterns.md
internal/api/: BUILD.bazel  app.go  sample.go
internal/api/db/: BUILD.bazel  db.go  db_test.go
internal/auth/: BUILD.bazel  authorization.go  browser.go  service.go
internal/auth/db/: BUILD.bazel  users.go
proto/sample/v1/: sample.proto
services/api/migrations/: 00001_create_auth_tables.sql  BUILD.bazel
services/gateway/: BUILD.bazel  gateway.json
tools/: status.sh
web/: BUILD.bazel  index.html  package.json  tsconfig.json  vite.config.mjs
web/src/: App.tsx  styles.css
web/src/api/: sampleClient.ts
