module(
    name = "sample_app",
    version = "0.0.0",
)

bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")
bazel_dep(name = "aspect_rules_js", version = "3.2.1")
bazel_dep(name = "gazelle", version = "0.51.3")
bazel_dep(name = "rules_flux_deploy", version = "0.1.0")
bazel_dep(name = "rules_go", version = "0.61.1")
bazel_dep(name = "rules_nodejs", version = "6.7.4")
bazel_dep(name = "rules_oci", version = "2.3.0")
bazel_dep(name = "rules_pkg", version = "1.2.0")

git_override(
    module_name = "rules_flux_deploy",
    commit = "f7b2165900cf9133e2b387e81e0939859fc971ce",
    remote = "https://github.com/adiom-data/bazel-rules.git",
)

node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain(node_version_from_nvmrc = "//:.nvmrc")
use_repo(node, "nodejs_toolchains")

pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm")
pnpm.pnpm(
    name = "pnpm",
    pnpm_version = "10.22.0",
    pnpm_version_integrity = "sha512-vwSe/plbKPUn/StBrgR0zikYb37cs79UUIe9Yfu+uyv3U2LRMH/aCcLSiOHkmXh6wS1Py2F6l0cYpgUfLu50HA==",
)
use_repo(pnpm, "pnpm", "pnpm__links")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
npm.npm_translate_lock(
    name = "npm",
    data = [
        "//:package.json",
        "//:pnpm-workspace.yaml",
        "//web:package.json",
    ],
    npmrc = "//:.npmrc",
    pnpm_lock = "//:pnpm-lock.yaml",
    update_pnpm_lock = True,
    use_pnpm = "@pnpm//:package/bin/pnpm.cjs",
    verify_node_modules_ignored = "//:.bazelignore",
)
use_repo(npm, "npm")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_static_debian12",
    digest = "sha256:9c346e4be81b5ca7ff31a0d89eaeade58b0f95cfd3baed1f36083ddb47ca3160",
    image = "gcr.io/distroless/static-debian12",
    platforms = ["linux/amd64"],
)
oci.pull(
    name = "gateway_base",
    # Resolved from ghcr.io/adiom-data/components/gateway:v0.0.1.
    digest = "sha256:2e04c398ee2463d2090ab9ca18d004ee68dcb9336be33ca0ec67aae13494691b",
    image = "ghcr.io/adiom-data/components/gateway",
    platforms = ["linux/amd64"],
)
oci.pull(
    name = "goosemigrate_base",
    # Resolved from ghcr.io/adiom-data/components/goosemigrate:v0.0.1.
    digest = "sha256:4728e49ee1c35474aab45218cc8b589667a7853d7a94475c97883268ae2aaf46",
    image = "ghcr.io/adiom-data/components/goosemigrate",
    platforms = ["linux/amd64"],
)
use_repo(
    oci,
    "distroless_static_debian12",
    "distroless_static_debian12_linux_amd64",
    "gateway_base",
    "gateway_base_linux_amd64",
    "goosemigrate_base",
    "goosemigrate_base_linux_amd64",
)

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.from_file(go_mod = "//:go.mod")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
go_deps.gazelle_override(
    directives = ["gazelle:proto disable"],
    path = "github.com/adiom-data/framework",
)
use_repo(
    go_deps,
    "com_github_caarlos0_env_v11",
    "com_connectrpc_connect",
    "com_github_adiom_data_framework",
    "com_github_jackc_pgx_v5",
    "org_golang_google_protobuf",
    "org_golang_x_oauth2",
)

flux_deploy_deps = use_extension(
    "@rules_flux_deploy//flux_deploy:extensions.bzl",
    "flux_deploy_dependencies",
)
use_repo(flux_deploy_deps, "rules_flux_deploy_tools")
