load("@rules_flux_deploy//flux_deploy:defs.bzl", "deploy_image", "image_kustomization", "publish_bundle_set")

filegroup(
    name = "app_srcs",
    srcs = glob(["app/**"]),
)

filegroup(
    name = "infra_srcs",
    srcs = glob(["infra/**"]),
)

filegroup(
    name = "migration_srcs",
    srcs = glob(["migrations/**"]),
)

# Preview overlays (sibling kustomizations that inject the preview-registry pull
# secret). They reference the base bundle dirs, so the preview bundles package both.
filegroup(
    name = "app_preview_srcs",
    srcs = glob(["app-preview/**"]),
)

filegroup(
    name = "migration_preview_srcs",
    srcs = glob(["migrations-preview/**"]),
)

deploy_image(
    name = "api_image",
    image = "//cmd/api:image",
    repository_suffix = "sample-app-api",
    yaml_ref = "ghcr.io/adiom-data/sample-app-api",
)

deploy_image(
    name = "gateway_image",
    image = "//services/gateway:image",
    repository_suffix = "sample-app-gateway",
    yaml_ref = "ghcr.io/adiom-data/sample-app-gateway",
)

deploy_image(
    name = "migrate_image",
    image = "//cmd/migrate:image",
    repository_suffix = "sample-app-migrate",
    yaml_ref = "ghcr.io/adiom-data/sample-app-migrate",
)

image_kustomization(
    name = "infra_deploy",
    artifact_suffix = "sample-app-infra-deploy",
    bundle_name = "infra",
    overlay_path = "./",
    source_prefix = "deploy/infra",
    srcs = [":infra_srcs"],
)

image_kustomization(
    name = "migration_deploy",
    artifact_suffix = "sample-app-migration-deploy",
    bundle_name = "migration",
    force = True,
    images = [":migrate_image"],
    overlay_path = "./",
    repository_prefix_override_all = "{STABLE_REFERENCE_PREFIX}",
    source_prefix = "deploy/migrations",
    srcs = [":migration_srcs"],
    stamp = True,
)

image_kustomization(
    name = "app_deploy",
    artifact_suffix = "sample-app-deploy",
    bundle_name = "app",
    images = [
        ":api_image",
        ":gateway_image",
    ],
    overlay_path = "./",
    repository_prefix_override_all = "{STABLE_REFERENCE_PREFIX}",
    source_prefix = "deploy/app",
    srcs = [":app_srcs"],
    stamp = True,
)

image_kustomization(
    name = "migration_deploy_preview",
    artifact_suffix = "sample-app-migration-deploy",
    bundle_name = "migration",
    force = True,
    images = [":migrate_image"],
    overlay_path = "./migrations-preview",
    repository_prefix_override_all = "{STABLE_PREVIEW_REFERENCE_PREFIX}",
    source_prefix = "deploy",
    srcs = [
        ":migration_preview_srcs",
        ":migration_srcs",
    ],
    stamp = True,
)

image_kustomization(
    name = "app_deploy_preview",
    artifact_suffix = "sample-app-deploy",
    bundle_name = "app",
    images = [
        ":api_image",
        ":gateway_image",
    ],
    overlay_path = "./app-preview",
    repository_prefix_override_all = "{STABLE_PREVIEW_REFERENCE_PREFIX}",
    source_prefix = "deploy",
    srcs = [
        ":app_preview_srcs",
        ":app_srcs",
    ],
    stamp = True,
)

publish_bundle_set(
    name = "publish",
    bundles = [
        ":infra_deploy",
        ":migration_deploy",
        ":app_deploy",
    ],
    compare_tag = "latest",
    push_prefix = "ghcr.io/adiom-data",
    push_tags = [
        "{STABLE_GIT_COMMIT}",
        "latest",
    ],
    skip_existing = True,
    source = "https://github.com/adiom-data/sample-app",
    stamp = True,
)

publish_bundle_set(
    name = "publish_preview",
    artifact_prefix = "{STABLE_PREVIEW_REFERENCE_PREFIX}",
    bundles = [
        ":infra_deploy",
        ":migration_deploy_preview",
        ":app_deploy_preview",
    ],
    stamp = True,
    tag = "{STABLE_PREVIEW_TAG}",
)
