load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@npm//web:vite/package_json.bzl", vite_bin = "bin")

exports_files(["package.json"], visibility = ["//visibility:public"])

filegroup(
    name = "package_json",
    srcs = ["package.json"],
    visibility = ["//visibility:public"],
)

npm_link_all_packages(name = "node_modules")

js_library(
    name = "vite_config",
    srcs = ["vite.config.mjs"],
    deps = [
        ":node_modules/@vitejs/plugin-react",
        ":node_modules/vite",
    ],
)

vite_bin.vite(
    name = "build",
    srcs = [
        "index.html",
        "src/api/sampleClient.ts",
        "src/App.tsx",
        "src/gen/sample/v1/sample_pb.ts",
        "src/main.tsx",
        "src/styles.css",
        "tsconfig.json",
        ":node_modules/@adiom-data/framework-web",
        ":node_modules/@bufbuild/protobuf",
        ":node_modules/@connectrpc/connect",
        ":node_modules/@connectrpc/connect-web",
        ":node_modules/@types/react",
        ":node_modules/@types/react-dom",
        ":node_modules/react",
        ":node_modules/react-dom",
    ],
    chdir = package_name(),
    data = [":vite_config"],
    fixed_args = [
        "build",
        "--config",
        "$$RUNFILES_DIR/$(rlocationpath :vite_config)",
    ],
    out_dirs = ["dist"],
    visibility = ["//visibility:public"],
)
