load("@aspect_bazel_lib//lib:transitions.bzl", "platform_transition_filegroup")
load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load", "oci_push")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

go_library(
    name = "api_lib",
    srcs = ["main.go"],
    importpath = "github.com/adiom-data/sample-app/cmd/api",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/api",
        "@com_github_caarlos0_env_v11//:env",
    ],
)

go_binary(
    name = "api",
    embed = [":api_lib"],
    pure = "on",
    visibility = ["//visibility:public"],
)

platform_transition_filegroup(
    name = "api_linux_amd64",
    srcs = [":api"],
    target_platform = "@rules_go//go/toolchain:linux_amd64",
)

pkg_tar(
    name = "api_layer",
    srcs = [":api_linux_amd64"],
)

oci_image(
    name = "image",
    base = "@distroless_static_debian12_linux_amd64",
    entrypoint = ["/api"],
    tars = [":api_layer"],
    user = "65532:65532",
    visibility = ["//visibility:public"],
)

oci_load(
    name = "load",
    image = ":image",
    repo_tags = ["sample-app-api:latest"],
)

oci_push(
    name = "push",
    image = ":image",
    remote_tags = ["latest"],
    repository = "ghcr.io/adiom-data/sample-app-api",
)
