load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "auth",
    srcs = [
        "authorization.go",
        "browser.go",
        "service.go",
    ],
    importpath = "github.com/adiom-data/sample-app/internal/auth",
    visibility = ["//internal/api:__pkg__"],
    deps = [
        "//internal/auth/db",
        "@com_github_adiom_data_framework//auth",
        "@com_github_adiom_data_framework//auth/authservice",
        "@com_github_adiom_data_framework//auth/browserauth",
        "@com_github_adiom_data_framework//auth/credential",
        "@com_github_adiom_data_framework//auth/tokenissuer",
        "@com_github_adiom_data_framework//gen/go/adiom/auth/v1/authv1connect",
        "@com_github_adiom_data_framework//httpapp",
        "@com_github_adiom_data_framework//httpapp/jwtauth",
        "@org_golang_x_oauth2//:oauth2",
    ],
)
