load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "db",
    srcs = ["db.go"],
    importpath = "github.com/adiom-data/sample-app/internal/api/db",
    visibility = ["//internal/api:__pkg__"],
    deps = ["@com_github_jackc_pgx_v5//stdlib"],
)

go_test(
    name = "db_test",
    srcs = ["db_test.go"],
    embed = [":db"],
)
